added todo to gitiirnore

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-
-
-- complete tidy up and deploy
 - work out how drafts works 
+- ignore todo from site build 
+- fix up repo readme
+- start drafting other posts
